Fixes CSS to increase text legibility.

--- a/survaider/static/dev/formbuilder.css
+++ b/survaider/static/dev/formbuilder.css
@@ -860,6 +860,9 @@
   color: #ffffff;
   z-index: 101;
 }
+.sb-attach .crop .tools p {
+  text-shadow: 0 0 5px #000;
+}
 .sb-attach .crop .croparea {
   width: 100%;
   height: 100%;
